welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:2: error: '=' expected but ')' found.
def growFlowers()){
                 ^FlowerCase:51: error: illegal start of simple expression
}
^